[metadata]
name = KerasObese
version = 0.0.1
author = OrnateByte
author_email = ornatebyte+pypi@gmail.com
description = KerasObese is a simple utility for altering the architecture of keras models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unadalton2/KerasObese
project_urls =
    Bug Tracker = https://github.com/unadalton2/KerasObese/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src